<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.home.user.HomeFragment">

        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/action_bar"
            app:layout_constraintTop_toBottomOf="@+id/action_bar"
            app:layout_constraintVertical_bias="1.4"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/tv_telah_hadir"
                style="@style/nunitoRegular_14"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/kamu_telah_hadir_4_dari_10_pertemuan"
                android:textColor="@color/black_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linearLayoutPelatihan"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/static_img_pertemuan"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:src="@drawable/pertemuan"
                    android:contentDescription="@string/pertemuan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <TextView
                    android:id="@+id/btn_pertemuan"
                    style="@style/robotoMedium_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/pertemuan"
                    android:textColor="@color/primary_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/static_img_pertemuan" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayoutPelatihan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/static_img_pelatihan"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:src="@drawable/pelatihan"
                    android:contentDescription="@string/pelatihan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <TextView
                    android:id="@+id/btn_pelatihan"
                    style="@style/robotoMedium_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/list_pelatihan"
                    android:textColor="@color/primary_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/static_img_pelatihan" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/header1"
            style="@style/nunitoBold_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="16dp"
            android:text="@string/header1"
            android:textColor="@color/primary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/body1"
            style="@style/nunitoRegular_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bodytext1"
            android:textColor="@color/black_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header1" />

        <TextView
            android:id="@+id/subheading1"
            style="@style/nunitoBold_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/sub_heading1"
            android:textColor="@color/primary_blue"
            app:layout_constraintTop_toBottomOf="@id/body1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_img_kegiatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subheading1"
            android:paddingVertical="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            />

        <TextView
            android:id="@+id/subheading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visi_dncc"
            app:layout_constraintTop_toBottomOf="@id/rv_img_kegiatan"
            android:paddingHorizontal="16dp"
            style="@style/nunitoBold_16"
            android:textColor="@color/primary_blue"
            />

        <TextView
            android:id="@+id/body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            android:text="@string/body2"
            android:textColor="@color/black_text"
            style="@style/nunitoRegular_14"
            app:layout_constraintTop_toBottomOf="@id/subheading2"
            tools:layout_editor_absoluteX="-32dp" />

        <TextView
            android:id="@+id/subheading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/misi_dncc"
            app:layout_constraintTop_toBottomOf="@id/body2"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            style="@style/nunitoBold_16"
            android:textColor="@color/primary_blue" />

        <TextView
            android:id="@+id/body3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingHorizontal="16dp"
            android:text="@string/body3"
            android:textColor="@color/black_text"
            style="@style/nunitoRegular_14"
            app:layout_constraintTop_toBottomOf="@id/subheading3"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>