<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="8dp"
        app:cardMaxElevation="12dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_divisi_web"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/divisi_web"
                android:contentDescription="@string/divisi_illustration"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_divisi_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                app:layout_constraintVertical_bias="0.3"
                style="@style/nunitoSemiBold_14"
                android:textColor="@color/black_text"
                android:text="@string/divisi_web"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_divisi_web"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_groups_24"
                android:contentDescription="@string/anggota"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toEndOf="@id/img_divisi_web"
                app:layout_constraintTop_toBottomOf="@id/tv_divisi_web"
                android:layout_marginStart="36dp"/>


            <TextView
                android:id="@+id/tv_number_anggota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_group"
                android:text="@string/number_of_anggota"
                style="@style/nunitoSemiBold_14"
                android:textColor="@color/black_text"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_divisi_web"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/nunitoBold_14"
                android:textColor="@color/success_green"
                android:text="@string/terdaftar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>